--- a/test.html
+++ b/test.html
@@ -30,3 +30,16 @@
     fill="white"
   />
 </svg>
+
+<svg
+  width="12"
+  height="13"
+  viewBox="0 0 12 13"
+  fill="none"
+  xmlns="http://www.w3.org/2000/svg"
+>
+  <path
+    d="M7 0.796875H5V5.79687H0V7.79688H5V12.7969H7V7.79688H12V5.79688H7V0.796875Z"
+    fill="black"
+  />
+</svg>
